# position_optimizer

./: LICENSE  README.md
manipulability_pkg/manipulability_pkg/: CMakeLists.txt  package.xml
manipulability_pkg/manipulability_pkg/include/manipulability_pkg/: common.h  pick_place_manipulability.h
manipulability_pkg/manipulability_pkg/src/: pick_place_manipulability.cpp  pick_place_manipulability_srv.cpp  trajectory.cpp
manipulability_pkg/manipulability_pkg_msgs/: CMakeLists.txt  package.xml
position_optimizer/: CMakeLists.txt  package.xml
position_optimizer/data/: optimized_poses.txt
position_optimizer/launch/: iiwa_manipulability_optimizer.launch  manipulability_optimizer.launch  panda_manipulability_optimizer.launch  pose_optimizer.launch  ur_manipulability_optimizer.launch
position_optimizer/manipulability_pkg/manipulability_pkg/include/manipulability_pkg/: trajectory.h
position_optimizer/manipulability_pkg/manipulability_pkg/launch/: pick_place_manipulability.launch
position_optimizer/manipulability_pkg/manipulability_pkg/src/: pick_place_manipulability.cpp
position_optimizer/manipulability_pkg/manipulability_pkg_msgs/srv/: pickPlaceManipulability.srv
position_optimizer/position_optimizer_examples/: package.xml
position_optimizer/position_optimizer_examples/config/: SA_params.yaml  scene_objects.yaml
position_optimizer/position_optimizer_examples/config/iiwa/: cartesian_chromosome_params.yaml  joint_config.yaml  spherical_chromosome_params.yaml
position_optimizer/position_optimizer_examples/config/panda/: joint_config.yaml  spherical_chromosome_params.yaml
position_optimizer/position_optimizer_examples/config/ur/: spherical_chromosome_params.yaml
position_optimizer/position_optimizer_examples/launch/: iiwa_manipulability_optimizer.launch  ur_manipulability_optimizer.launch
position_optimizer/script/: annealing.py  generation.py  genetic_alg.py  individual.py
position_optimizer_examples/: CMakeLists.txt  package.xml
position_optimizer_examples/config/: GA_params.yaml  scene_objects.yaml
position_optimizer_examples/config/panda/: cartesian_chromosome_params.yaml
position_optimizer_examples/config/ur/: cartesian_chromosome_params.yaml  joint_config.yaml
position_optimizer_examples/launch/: panda_manipulability_optimizer.launch
