<?xml version="1.0"?>
<package format="2">
  <name>position_optimizer_examples</name>
  <version>0.0.0</version>
  <description>The position_optimizer_examples package</description>

  <maintainer email="paolo.franceschi@stiima.cnr.it">marie</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend> iiwa_moveit         </exec_depend>
  <exec_depend> ur10_moveit_config  </exec_depend>
  <exec_depend> panda_moveit_config </exec_depend>
  <exec_depend> position_optimizer  </exec_depend>

  <export>

  </export>
</package>
