<?xml version="1.0"?>
<package format="2">
  <name>manipulability_pkg_msgs</name>
  <version>0.0.0</version>
  <description>The manipulability_pkg_msgs package</description>

  <author email="paolo.franceschi@stiima.cnr.it">paolo franceschi</author>
  <maintainer email="paolo.franceschi@stiima.cnr.it">paolo franceschi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs     </depend>
  <depend>message_generation</depend>
  <depend>std_msgs          </depend>

  <export>
  </export>
</package>
