<?xml version="1.0"?>
<package format="2">
  <name>position_optimizer_examples</name>
  <version>0.0.0</version>
  <description>The position_optimizer_examples package</description>

  <maintainer email="paolo.franceschi@stiima.cnr.it">marie</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>iiwa_moveit       </depend>
  <depend>ur10_moveit_config</depend>
  <depend>panda_moveit_config</depend>
  <depend>position_optimizer</depend>

  <export>

  </export>
</package>
